--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,5 +1,6 @@
 $overlay-level: 10;
 $table-head-level: 10;
+$my-meun-level: 10;
 $search-modal-level: 20;
 $global-header-level: 30;
 $search-history-level: 30;
